--- a/OtherOptions.html
+++ b/OtherOptions.html
@@ -13,7 +13,8 @@
             <p class="above-box3">Coal</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Burning coal releases a large amount of pollutants, such as CO2, SO2, NOx, and other harmful things, into the atmosphere<br><br>
+                    Coal power plants cause approximately 100,000 human deaths per 1000 terrawatt-hours(TWh)
                 </p>
             </div>
         </div>
@@ -21,7 +22,8 @@
             <p class="above-box3">Petroleum</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Also releases many pollutants such as CO and NOx which harm the atmosphere and life within<br><br>
+                    High risk of oil spills, which are dangerous for marine ecosystems aswell as coastal ecosystems
                 </p>
             </div>
         </div>
@@ -29,7 +31,8 @@
             <p class="above-box3">Natural Gas</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Releases methane, a potent greenhouse gas, into the atmosphere<br><br>
+                    Fracking to extract Natural Gas can induce earthquakes aswell as contaminate nearby groundwater
                 </p>
             </div>
         </div>
@@ -37,18 +40,20 @@
             <p class="above-box3">Solar</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Unreliable energy source, as dependence on sunlight means intermittency<br><br>
+                    Uses many minerals and materials which are expensive and rare, with finite lifespans
                 </p>
             </div>
         </div>
     </div>
 
-    <div id="boxes" style="padding-top: 4em;">
+    <div id="boxes" style="padding-top: 3em;">
         <div class="box-container">
             <p class="above-box3">Wind</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Dangerous to wildlife, as flying creatures such as insects, birds, and bats often collide with the large turbines and die<br><br>
+                    Inconsistent power output, as wind itself is inconsistent in nature
                 </p>
             </div>
         </div>
@@ -56,7 +61,8 @@
             <p class="above-box3">Hydroelectric</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Dams disrupt local ecosystems, causing fish and other water-dependent wildlife to alter their behavior to compensate<br><br>
+                    High maintenence due to sediments and constant pressure on the dams themselves
                 </p>
             </div>
         </div>
@@ -64,7 +70,8 @@
             <p class="above-box3">Geothermal</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Fracking for extraction can induce earthquakes<br><br>
+                    Limited use-cases, only available in regions with high geothermal activity, such as a volcano
                 </p>
             </div>
         </div>
@@ -72,10 +79,18 @@
             <p class="above-box3">Biofuel</p>
             <div class="NotBox">
                 <p class="divp"> 
-                    Heello
+                    Requires mass farming and deforestation, which is harmful to wildlife and our food supply<br><br>
+                    Release of greenhouse gases due to mass deforestation and improper agricultual practices
                 </p>
             </div>
         </div>
     </div>
+    <div style="display: flex;" class="myDIV">
+        <a href="index.html" style="display: inline-block; position: absolute; display: flex; left: 910px; padding-top: 5em;">
+            <img src="Undo-512.webp" style="width: 100px; height: 100px; object-fit: cover; display: block;" alt="Back">
+            <span style="position: absolute; bottom: 28px; left: 55%; transform: translateX(-50%); color: #EC4A2E; font-size: 25px;">
+        Go Back
+            </span>
+        </div>
 </body>
 </html>
