--- a/RisksAndBenefits.html
+++ b/RisksAndBenefits.html
@@ -18,6 +18,11 @@
                     Mismanagement of waste, due to human error and/or negligence<br><br>
                     Considered to be non-renewable because of its dependence on Uranium from the earth to generate power.<br><br>
                 </p>
+                <div class="image-container">
+                    <img src="chernobyl.jpg" style="width: 550px; height: 300.5px;">
+                    <span class="image-caption">Chernobyl, Ukraine</span>
+                </div>
+                
             </div>
         </div>
         
@@ -26,7 +31,7 @@
             <p class="above-box2"><b>Benefits</b></p>
             <div class="right" style="border-color: #00FF00;">
                 <p class="p2">
-                    Very few human casualties compared to competing options, at only approximately <b>90</b> deaths per terrawatt-hours(TWh).<br><br>
+                    Very few human casualties compared to competing options, at only approximately <b>90</b> deaths per 1000 terrawatt-hours(TWh).<br><br>
                     Provides consistent base power loads, which keep the power grid stable and healthy<br><br>
                     Long average lifespan, and while originally estimated to be 40 years, the lifespan of most reactors is up to <b>80+</b> years.<br><br>
                     Low climate risks, with significantly lower pollution and greenhouse gas emissions than most other energy sources.<br><br>
@@ -39,6 +44,14 @@
     </div>
 
 <br><br><br><br><br><br><br>
+
+<div style="display: flex;" class="myDIV">
+    <a href="index.html" style="display: inline-block; position: absolute; display: flex; left: 910px; padding-top: 5em;">
+        <img src="Undo-512.webp" style="width: 100px; height: 100px; object-fit: cover; display: block;" alt="Back">
+        <span style="position: absolute; bottom: 28px; left: 55%; transform: translateX(-50%); color: #EC4A2E; font-size: 25px;">
+    Go Back
+        </span>
+    </div>
 
     <script src="scripts.js"></script>
 </body>
